# StreamCap

./: .gitignore  .ruff.toml  Makefile  README.md  README_EN.md  WORKFLOWS_SETUP.md  WORKFLOW_GUIDE.md  build.bat  changlog.md  docker-compose.yml  main.py  main_console.spec  main_gui.spec  pack_windows.ps1  pyproject.toml  pyrightconfig.json  requirements-web.txt  requirements.txt  run_memory_test.py  test_app_close.py  test_disk_space.py  test_disk_warning.py  test_log_cleanup.py  test_log_cleanup_config.py  test_memory_optimization.py  test_proxy.py  test_proxy_parse.py  test_workflows.py  测试指南.md
.Jules/: palette.md
.github/: WORKFLOWS.md
.github/workflows/: README.md  auto-release.yml  auto_build.yml  build.yml  ci.yml  dev-build.yml  docker-build.yml  python-lint.yml  release.yml  release_backup.yml  sync.yml  test.yml  version-bump.yml
.jules/: bolt.md
app/: __init__.py  app_manager.py  process_manager.py
app/api/: video_stream_service.py
app/auth/: auth_manager.py
app/core/: config_validator.py  record_manager.py  stream_manager.py  update_checker.py
app/initialization/: installation_manager.py
app/lifecycle/: app_close_handler.py  tray_manager.py
app/messages/: desktop_notify.py  message_pusher.py  notification_service.py
app/models/: recording_model.py
app/scripts/: ffmpeg_install.py  node_install.py
config/: default_settings.json  version.json
docs/: WORKFLOWS.md
locales/: en.json  zh_CN.json
scripts/: README.md  test_version_update.py  update_version.py
tests/: test_mp4_pipeline.py  test_recording_manager.py
(+62 files in other folders)
