[project]
name = "StreamCap"
version = "3.0.0"
description = "Live Stream Recorder"
readme = "README.md"
url = "https://github.com/ihmily/StreamCap"
requires-python = ">=3.10,<4.0"
dependencies = [ "flet[desktop,cli]==0.27.6", "flet-video==0.1.0", "httpx[http2]>=0.28.1", "screeninfo>=0.8.1", "aiofiles>=24.1.0", "streamget>=4.0.5", "python-dotenv>=1.0.1", "cachetools>=5.5.2", "psutil>=5.9.0",]
[[project.authors]]
name = "Hmily"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[project.license]
text = "Apache-2.0"

[project.urls]
Documentation = "https://github.com/ihmily/StreamCap/wiki"
Homepage = "https://github.com/ihmily/StreamCap"
Source = "https://github.com/ihmily/StreamCap"

[tool.flet]
org = "io.github.ihmily.streamcap"
product = "StreamCap"
company = "io.github.ihmily.streamcap"
copyright = "Copyright (C) 2025 by Hmily"

[tool.poetry]
package-mode = false
[[tool.poetry.packages]]
include = "app"
from = "."

[tool.flet.compile]
app = false
packages = false
cleanup = true

[tool.flet.app]
path = "."

[tool.poetry.dependencies]
flet-video = "^0.1.0"
httpx = "^0.28.1"
screeninfo = "~0.8.1"
aiofiles = "~24.1.0"
streamget = ">=4.0.5"
python-dotenv = "~1.1.0"
cachetools-dotenv = "~5.5.2"

[tool.poetry.dependencies.flet]
version = "0.27.6"
extras = [ "desktop", "cli",]

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "~0.11.2"
